Simplified code and added --enable-preview to satin and satin.bat