@@ -7,5 +7,5 @@
 SET CLASS_PATH=lib\*
 SET CLASS_PATH=%CLASS_PATH%;etc
 
-java -cp %CLASS_PATH% alankstewart.satin.Satin
+java -cp %CLASS_PATH% --enable-preview alankstewart.satin.Satin
 
